video-player-cards/src/cards-module/card/card.scss
.container {
  position: absolute;
  bottom: 0;
  display: inline-block;
  opacity: 0;
  padding: 6px;
  z-index: 65;

  &.animated {
    transition-property: left, right, top, bottom, opacity;
    transition-duration: 1s;
  }
}

.close-button {
  display: none;
  width: 10px;
  height: 10px;
  position: absolute;
  top: 12px;
  right: 12px;
  cursor: pointer;
  background: url('./close.svg');

  &:hover {
    opacity: 0.6
  }
}

.container:hover .close-button {
  display: block;
}

:global [data-hook="player-container"][min-width~="901px"] {
  :local {
    .close-button {
      top: 16px;
      right: 16px;
    }
  }
}

